<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Updater</string>
    <string name="display_name">Updater</string>
    <string name="download_path" translatable="false">/data/evolution_updates/</string>
    <string name="export_path" translatable="false">Evolution X updates/</string>
    <string name="updater_server_url" translatable="false">https://raw.githubusercontent.com/danhancach/packages_apps_Updater/cnb/builds/{device}.json</string>
    <string name="support_forum_url" translatable="false">https://t.me/SonyXperiaChat</string>
    <string name="support_source_url" translatable="false">https://github.com/danhancach</string>
    <string name="default_maintainer_name" translatable="false">danhancach</string>
    <string name="support_source_content_description" translatable="false">Source</string>
    <string name="support_forum_content_description" translatable="false">Forum</string>
    <string name="verification_failed_notification">Verification failed</string>
    <string name="verifying_download_notification">Verifying update</string>
    <string name="downloading_notification">Downloading</string>
    <string name="download_paused_notification">Download paused</string>
    <string name="download_paused_error_notification">Download error</string>
    <string name="download_completed_notification">Download completed</string>
    <string name="download_starting_notification">Starting download</string>
    <string name="update_failed_notification">Update failed</string>
    <string name="installation_suspended_notification">Installation suspended</string>
    <string name="new_updates_found_title">New updates</string>
    <string name="text_download_speed">%1$s, %2$s/s</string>
    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>
    <string name="suspend_button">Suspend</string>
    <string name="installing_update">Installing update package</string>
    <string name="installing_update_error">Install error</string>
    <string name="installing_update_finished">Update installed</string>
    <string name="finalizing_package">Finalizing package installation</string>
    <string name="preparing_ota_first_boot">Preparing for first boot</string>
    <string name="dialog_prepare_zip_message">Preliminary update preparation</string>
    <string name="dialog_battery_low_title">Low battery</string>
    <string name="dialog_battery_low_message_pct">The battery level is too low, you need at least <xliff:g id="percent_discharging">%1$d</xliff:g>%% of the battery to continue, <xliff:g id="percent_charging">%2$d</xliff:g>%% if charging.</string>
    <string name="dialog_scratch_mounted_message">
        <![CDATA[
        Please run the following commands and retry the update:\n
        • adb root\n
        • adb enable-verity\n
        • adb reboot
        ]]>
    </string>
    <string name="dialog_scratch_mounted_title">Cannot install update with OverlayFS mounted</string>
    <string name="reboot">Reboot</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_auto_updates_check">Auto updates check</string>
    <string name="menu_auto_updates_check_interval_daily">Once a day</string>
    <string name="menu_auto_updates_check_interval_weekly">Once a week</string>
    <string name="menu_auto_updates_check_interval_monthly">Once a month</string>
    <string name="menu_auto_updates_check_interval_never">Never</string>
    <string name="menu_auto_delete_updates">Delete updates when installed</string>
    <string name="menu_delete_update">Delete</string>
    <string name="menu_copy_url">Copy URL</string>
    <string name="menu_export_update">Export update</string>
    <string name="menu_show_changelog">Show changelog</string>
    <string name="changelog_loading">Loading changelog…</string>
    <string name="menu_changelog_url" translatable="false">https://raw.githubusercontent.com/danhancach/packages_apps_Updater/cnb/changelogs/<xliff:g id="device_name">%1$s</xliff:g>.txt</string>
    <string name="menu_ab_perf_mode">Prioritize update process</string>
    <string name="menu_update_recovery">Update recovery</string>
    <string name="toast_forced_update_recovery">It is impossible to disable Evolution X Recovery updates on this device.</string>
    <string name="snack_updates_found">New updates available</string>
    <string name="snack_no_updates_found">No new updates</string>
    <string name="snack_updates_check_failed">The update check failed. Please check your internet connection and try again later.</string>
    <string name="snack_download_failed">The download failed. Please check your internet connection and try again later.</string>
    <string name="snack_download_verification_failed">The update verification failed.</string>
    <string name="snack_download_verified">Download completed.</string>
    <string name="snack_update_not_installable">This update can\'t be installed on top of the current build.</string>
    <string name="header_title_text">Evolution X\n%1$s</string>
    <string name="header_android_version">Android <xliff:g id="version" example="7.1.2">%1$s</xliff:g></string>
    <string name="header_last_updates_check">Last checked: <xliff:g id="date" example="1 January 1970">%1$s</xliff:g> (<xliff:g id="time" example="01:23">%2$s</xliff:g>)</string>
    <string name="list_build_version">Evolution X <xliff:g id="version" example="14.1">%1$s</xliff:g></string>
    <string name="list_build_version_date">Evolution X <xliff:g id="version" example="14.1">%1$s</xliff:g> - <xliff:g id="date" example="July 11, 2017">%2$s</xliff:g></string>
    <string name="update_type_full">Full ROM update</string>
    <string name="update_type_partial">Partial update</string>
    <string name="update_expand_options">More options</string>
    <string name="list_download_progress_newer"><xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g> of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g></string>
    <string name="list_download_progress_eta_newer"><xliff:g id="filesize_without_unit" example="12.2">%1$s</xliff:g> of <xliff:g id="filesize_without_unit" example="310 MB">%2$s</xliff:g> (<xliff:g id="eta" example="3 minutes left">%3$s</xliff:g>)</string>
    <string name="list_verifying_update">Verifying update</string>
    <string name="list_no_updates">No new updates found. To manually check for new updates, use the Refresh button.</string>
    <string name="action_download">Download</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_install">Install</string>
    <string name="action_info">Info</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="confirm_delete_dialog_title">Delete file</string>
    <string name="confirm_delete_dialog_message">Delete the selected update file?</string>
    <string name="apply_update_dialog_title">Apply update</string>
    <string name="apply_update_dialog_message">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will restart itself in recovery mode to install the update.\n\nNote: This feature requires a compatible Recovery or updates will need to be installed manually.</string>
    <string name="apply_update_dialog_message_ab">You are about to install <xliff:g id="update_name">%1$s</xliff:g>.\n\nIf you press <xliff:g id="ok">%2$s</xliff:g>, the device will begin installing in the background.\n\nOnce completed, you will be prompted to reboot.</string>
    <string name="cancel_installation_dialog_message">Cancel the installation?</string>
    <string name="label_download_url">Download URL</string>
    <string name="toast_download_url_copied">URL Copied</string>
    <string name="dialog_export_title">Exporting update</string>
    <string name="notification_export_success">Update exported</string>
    <string name="notification_export_fail">Export error</string>
    <string name="toast_already_exporting">Already exporting an update</string>
    <string name="toast_export_started">Export started</string>
    <plurals name="eta_seconds">
        <item quantity="one">1 second left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> seconds left</item>
    </plurals>
    <plurals name="eta_minutes">
        <item quantity="one">1 minute left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes left</item>
    </plurals>
    <plurals name="eta_hours">
        <item quantity="one">1 hour left</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours left</item>
    </plurals>
    <string name="update_over_metered_network_title">Warning</string>
    <string name="update_over_metered_network_message">You\'re about to download an update package over a metered network which is likely going to cause high data usage. Would you like to proceed?</string>
    <string name="checkbox_metered_network_warning">Do not show again</string>
    <string name="menu_metered_network_warning">Metered network warning</string>
    <string name="blocked_update_dialog_title">Update blocked</string>
    <string name="blocked_update_dialog_message">This update cannot be installed using the updater app.  Please read <xliff:g id="info_url">%1$s</xliff:g> for more information.</string>
    <string name="blocked_update_info_url" translatable="false">https://sourceforge.net/projects/danhancach/files/pdx237/</string>
    <string name="export_channel_title">Export completion</string>
    <string name="new_updates_channel_title">New updates</string>
    <string name="ongoing_channel_title">Ongoing downloads</string>
    <string name="update_failed_channel_title">Update failed</string>
    <string name="info_dialog_title">Did you know?</string>
    <string name="info_dialog_message">Evolution X updates are full installation packages. That means you can always install only the latest update, even if you skipped some in between!</string>
    <string name="info_dialog_ok">Thanks for the info!</string>
    <string name="local_update_import">Update from storage</string>
    <string name="home_add_update">Add update</string>
    <string name="local_update_import_summary">Select an OTA package from device storage</string>
    <string name="local_update_import_progress">Importing update from storage\u2026</string>
    <string name="local_update_import_success">%1$s has been imported. Do you want to install it?</string>
    <string name="local_update_import_failure">Failed to import update from storage</string>
    <string name="local_update_import_install">Install</string>
    <string name="local_update_import_later">Later</string>
    <string name="local_update_name">Update from storage</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_message">Please note that when multiple updates are available, there is no need to go update-by-update, you can always install the latest one directly, and then safely delete old updates to free up storage space.</string>
</resources>